# RP2040-pico_synth_ex

./: CMakeLists.txt  LICENSE  README.md  notes.h  pico_synth_ex.c  pico_synth_ex.h  pico_synth_ex_presets.h
example/: CMakeLists.txt  example.c
sound_i2s/: sound_i2s.c  sound_i2s_16bits.pio
